--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
+    "react-devtools": "^6.1.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0",
